# Decision-Intelligence-Workflow

./: README.md  main.py  pyproject.toml
api/: index.py
api/routes/: progress.py  query.py  run.py
assets/: evaluation_20260409_161057.json  evaluation_20260409_164010.json  result.json  result1.json
baseline/: naive_summariser.py
data/: decision_intelligence.db
evaluation/: compare.py  metrics.py
frontend/: app.js  index.html  package.json  styles.css
pipeline/: __init__.py  config.py  db.py  db_init.py  db_models.py  orchestrator.py  progress.py  repository.py
pipeline/agents/: analyst_agent.py  base_agent.py  critic_agent.py
pipeline/ingestion/: arxiv_rss.py  base.py  github_trending.py  hn_scraper.py  service.py
pipeline/models/: __init__.py  agent_output.py  raw_item.py  run_result.py  scored_item.py
pipeline/scoring/: deduplicator.py  service.py  signal_filter.py  source_weights.py  tfidf_scorer.py
pipeline/synthesis/: synthesiser.py
scripts/: run_evaluation.py  run_pipeline.py  test_arxiv_ingestor.py  test_github_ingestor.py  test_hn_ingestor.py  test_ingestion.py  test_query_flow.py
